@@ -1,3 +1,9 @@
+2001-06-13  Martin Baulig  <baulig@suse.de>
+
+	* gnome-selector.[ch]: Moved to libgnome-extra/libgnome/.
+	* gnome-selector-factory.[ch]: Likewise.
+	* gnome-async-context.[ch]: Likewise.
+
 2001-06-12  Martin Baulig  <baulig@suse.de>
 
 	* gnome-program.c (gnome_program_get_property): Implemented PROP_POPT_CONTEXT.
